[package]
name = "hellorltk"
version = "0.1.0"
authors = ["Thom Bruce"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.8"
specs = "0.17"
specs-derive = "0.4"
serde= { version = "1.0", features = ["derive"] }
serde_json = "1.0"
